--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,10 @@ jobs:
           install-yarn: true
           node-version: '24.9.0'
       - run: |
-          npm install selenium-webdriver
+          npm install -g chromedriver
+          chromedriver --version
           node test.js
+
 workflows:
   test_my_app:
     jobs:
