--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           install-yarn: true
           node-version: '24.9.0'
       - run: |
-          apt-get update -y
+          sudo apt-get update -y
           sudo apt-get install -y libnspr4 
           sudo npm install -g chromedriver
           chromedriver --version
