--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,25 @@
-version: '2.1'
+version: 2.1
+
 orbs:
+  browser-tools: circleci/browser-tools@2.3.1
+  jq: circleci/circleci/jq@3.0.2
   node: circleci/node@7.2.0
+
+
+
 jobs:
-  install-node-example:
+  the-job:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/base:2025.10
     steps:
       - checkout
-      - node/install:
-          install-yarn: true
-          node-version: '24.9.0'
-      - run: |
-          sudo apt-get update -y
-          sudo apt-get install -y libnspr4 
-          npm install selenium-webdriver
+      - jq/install
+      - browser-tools/install-browser-tools
+      - node/install
+      - run: 
           node test.js
 
 workflows:
-  test_my_app:
+  your-workflow:
     jobs:
-      - install-node-example
+      - the-job
