--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   browser-tools: circleci/browser-tools@2.3.1
-  jq: circleci/circleci/jq@3.0.2
+  jq: circleci/jq@3.0.2
   node: circleci/node@7.2.0
 
 
