--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
       - run: | 
           google-chrome --version
           chromedriver --version
+          npm install --save selenium-webdriver
           node test.js
 
 workflows:
