--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,10 @@ jobs:
       - browser-tools/install_browser_tools
       - run: | 
           npm install --save selenium-webdriver
+          npm install --save nodemailer
+          npm install --save dotenv
           node test.js
+          node mailer.js
 
 workflows:
   your-workflow:
