--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "nodemailer": "^7.0.9",
     "selenium-webdriver": "^4.36.0"
   },
   "devDependencies": {
